--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@ small
 }
 
 .image{     
-    background-image: url("");   
     height:500px;   
     width: 100%;
-    background-image:    url("2222222222222222.png");    
+    background-image:    url("./images/2222222222222222.jpg");     
     /*background-size: cover;*/
     background-size: contain;
     background-repeat: no-repeat;
