--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@ small
 
 </style>
 <body>     
-    <div class="container">     
-
+    <div class="container">      
+        <br> <br>  
+        
     <!-- Button trigger modal -->
         <a type="button" class="fixed fi float-end" data-bs-toggle="modal" data-bs-target="#exampleModal" > <i class="fa fa-question-circle float-end" style="color : #d2a056; font-size: 35px; padding-top: 10px;"></i></a>    
 
@@ -77,7 +78,6 @@ small
             </div>  
             <div class="col-lg ">       
                 <p id="demo" class="pad" ></p>            
-                <small>Time until Monday, 31 May 2021, 23:00:00 (Manila time)</small>
             </div>    
         </div>  
     </div>  
@@ -129,7 +129,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "We have lift off. Eros is now officially open for all!"; 
   }
 }, 1000);
 </script>  
