--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> 
+    <title>Project Eros Countdown </title> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">   
@@ -101,9 +101,9 @@ small
 <script> 
  
 // Set the date we're counting down to
-var countDownDate = new Date("Jan 5, 2021 15:37:25").getTime();   
+// var countDownDate = new Date("Jan 5, 2021 15:37:25").getTime();   
 
-// var countDownDate = new Date("May 31, 2021 23:00:00").getTime();   
+var countDownDate = new Date("May 31, 2021 23:00:00").getTime();   
 
 // Update the count down every 1 second
 var x = setInterval(function() {
