--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@ small
 }   
 
 @media screen and (min-width: 800px) {    
-    .pad{padding-top: 150px;} 
+    .pad1{padding-top: 250px;} 
     .fi { 
         padding-right: 150px; 
         padding-top: 20px; 
     }  
-    .pad1{padding-top: 250px;}   
 
-} 
+}  
+    .pad{padding-top: 150px;}    
 
 </style>
 <body>     
@@ -92,7 +92,7 @@ small
             </div>
             </div>  
             <div class="col-lg ">       
-                <p id="demo" class="pad"  data-aos="fade-left" data-aos-delay="1000" ></p>             
+                <p id="demo" class="pad1"  data-aos="fade-left" data-aos-delay="1000" ></p>             
             </div>    
         </div>  
     </div>  
@@ -155,16 +155,14 @@ var x = setInterval(function() {
   if (distance < 0) { 
     clearInterval(x);         
 
-    window.onload = reloadUsingLocationHash();
+    // window.onload = reloadUsingLocationHash(); 
 
-
-
+    document.getElementById("demo").classList.remove("pad1");   
+    document.getElementById("demo").classList.add("pad");  
 
     document.getElementById("demo").innerHTML = "";    
     document.getElementById("demo").innerHTML = "We have lift off. Eros is now officially open for all!";   
 
-    document.getElementById("demo").classList.remove("pad1");   
-    document.getElementById("demo").classList.add("pad");  
 
     document.getElementById("image").classList.remove("image");       
     document.getElementById("image").classList.add("img");    
