--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@ small
 }
 
 .image{     
-    height:500px;   
-    width: 100%;
+    height:600px;   
+    width: 100%; 
     /*background-size: cover;*/ 
     background-size: contain;
-    background-image:    url("./images/2222222222222222.jpg");       
+    background-image:    url("./images/2222222222222222.jpg");        
+    margin-bottom: 100px;
     background-repeat: no-repeat;
     background-position: right right ;  
 }    
@@ -51,7 +52,7 @@ small
     height:500px;   
     width: 100%;
     /*background-size: cover;*/ 
-    background-size: contain;
+    background-size: contain; 
     background-image:    url("./images/123.png");      
     background-repeat: no-repeat;
     background-position: right right ;  
@@ -67,7 +68,10 @@ small
 }   
 
 @media screen and (min-width: 800px) {    
-    .pad1{padding-top: 250px;} 
+    .pad1{
+        padding-top: 330px;  
+        padding-right: 100px;
+        }  
     .fi { 
         padding-right: 150px; 
         padding-top: 20px; 
@@ -87,7 +91,7 @@ small
         <div class="row text-center">        
             <div class="col-lg" >      
                 <br> <br> <br>  
-            <div   data-aos="fade-up" data-aos-delay="500" class="image" id="image">       
+            <div   data-aos="fade-up" data-aos-delay="500" class="image"  id="image">        
                 <!-- Display the countdown timer in an element -->    
             </div>
             </div>  
