--- a/index.html
+++ b/index.html
@@ -36,20 +36,17 @@ small
     padding-right: 20px;
 }
 
-.image{     
-    height:600px;   
-    width: 100%; 
-    /*background-size: cover;*/ 
+.image{       
+    /*background-size: cover;*/   
     background-size: contain;
-    background-image:    url("./images/2222222222222222.jpg");        
-    margin-bottom: 100px;
+    background-image:    url("./images/2222222222222222\ \(1\).jpg");         
     background-repeat: no-repeat;
     background-position: right right ;  
 }    
 
 
 .img{     
-    height:500px;   
+    height:800px;   
     width: 100%;
     /*background-size: cover;*/ 
     background-size: contain; 
@@ -65,20 +62,30 @@ small
     align-items: center; 
     display: table-cell;
     vertical-align:middle;
-}   
+}    
 
-@media screen and (min-width: 800px) {    
+.small {  
+
+    height:500px ;
+    width: 100%;  
+
+    }
+
+@media screen and (min-width: 800px) {     
+    .large {  
+
+    height:1200px ;
+    width: 100%;  
+
+    }
     .pad1{
-        padding-top: 330px;  
-        padding-right: 100px;
+        padding-top: 300px;    
+        float: left;
         }  
-    .fi { 
-        padding-right: 150px; 
-        padding-top: 20px; 
-    }  
 
-}  
-    .pad{padding-top: 150px;}    
+}   
+    .pad2{padding-top: 150px;}     
+    .pad{padding-top: 180px;}    
 
 </style>
 <body>     
@@ -90,8 +97,7 @@ small
 
         <div class="row text-center">        
             <div class="col-lg" >      
-                <br> <br> <br>  
-            <div   data-aos="fade-up" data-aos-delay="500" class="image"  id="image">        
+            <div   data-aos="fade-up" data-aos-delay="500" class="image large small"  id="image">        
                 <!-- Display the countdown timer in an element -->    
             </div>
             </div>  
