--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -80,12 +81,11 @@ small
     }
     .pad1{
         padding-top: 300px;    
-        float: left;
         }  
 
-}   
+}    
+    .pad{padding-top: 100px;}    
     .pad2{padding-top: 150px;}     
-    .pad{padding-top: 180px;}    
 
 </style>
 <body>     
@@ -97,7 +97,7 @@ small
 
         <div class="row text-center">        
             <div class="col-lg" >      
-            <div   data-aos="fade-up" data-aos-delay="500" class="image large small"  id="image">        
+            <div   data-aos="fade-up" data-aos-delay="500" class="image large "  id="image">        
                 <!-- Display the countdown timer in an element -->    
             </div>
             </div>  
